Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25552

system versioned partitioned by LIMIT tables break CHECK TABLE

    XMLWordPrintable

Details

    Description

      After MDEV-21011 CHECK TABLE no longer works on system versioned tables partitioned by LIMIT. While it is true, that misplaced row check does not apply to these tables, many other checks still do and should be run as before.

      Attachments

        Issue Links

          Activity

            People

              midenok Aleksey Midenkov
              serg Sergei Golubchik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.